test/files/pos/t2464/JavaOne.java
class ClassTwo {
	public static class Child  {
		public void func2() {return ;}
	}
}
