test/files/neg/t9617/DeprecatedClass.java
package p1;

@Deprecated
public class DeprecatedClass {
  public static void foo() {}
}
